# timeboost-contracts

./: .dockerignore  .gitignore  .gitmodules  Justfile  README.md  env.example  foundry.toml
.github/workflows/: build-and-test.yml
broadcast/DeployKeyManager.s.sol/11155111/: run-1761770150474.json  run-1761770187608.json  run-1761770252778.json  run-1761770270043.json  run-1761770449879.json
docker/: DOCKER.md  Dockerfile.dev  build-docker-images.sh  docker-compose.yml  docker.env.example
rust/timeboost-contract/: Cargo.toml
rust/timeboost-contract/src/: deployer.rs  lib.rs  provider.rs  sol_types.rs
rust/timeboost-contract/src/bindings/: address.rs  address_upgradeable.rs  deploy_key_manager.rs  ecdsa.rs  erc1967_proxy.rs  erc1967_upgrade.rs  erc1967_upgrade_upgradeable.rs  erc1967_utils.rs  errors.rs  i_beacon_upgradeable.rs  ierc1271.rs  ierc1822_proxiable_upgradeable.rs  initializable.rs  key_manager.rs  mock_key_manager.rs  mod.rs  ownable_upgradeable.rs  proxy.rs  signature_checker.rs  std_constants.rs  storage_slot.rs  storage_slot_upgradeable.rs  strings.rs  uups_upgradeable.rs
script/: DeployKeyManager.s.sol  README.md  deploy.sh
src/: KeyManager.sol  MockKeyManager.sol
src/mocks/: MockKeyManager.sol
test/: KeyManager.t.sol
